// Copyright 2021 Harness Inc.
// 
// Licensed under the Apache License, Version 2.0
// http://www.apache.org/licenses/LICENSE-2.0

syntax = "proto3";

package io.harness.perpetualtask;

option java_multiple_files = true;
option go_package = "955_delegate_beans";

import "google/protobuf/any.proto";
import "google/protobuf/duration.proto";

import "955-delegate-beans/src/main/proto/io/harness/delegate/capability.proto";

message PerpetualTaskId {
  string id = 1;
}

// schedule persists in mongodb
message PerpetualTaskSchedule {
  // Interval between successive iterations
  google.protobuf.Duration interval = 1;
  // Timeout for one iteration of the task
  google.protobuf.Duration timeout = 2;
}

message PerpetualTaskExecutionBundle {
  repeated delegate.Capability capabilities = 1;
  google.protobuf.Any task_params = 2;
  // Intended to be used for providing any kind of task setup abstractions required for building PT validation task
  map<string, string> setup_abstractions = 3;
}
